--- a/eng/pipelines/common/build-test-pack.yml
+++ b/eng/pipelines/common/build-test-pack.yml
@@ -124,12 +124,12 @@ steps:
   - ${{ if and(eq(parameters.isWindows, 'true'), or(ne(parameters.runAsPublic, 'true'), ne(parameters.runHelixTests, 'true'))) }}:
 
     - script: ${{ parameters.buildScript }}
-              -pack 
+              -restore -build -pack 
               -sign $(_SignArgs)
               -publish $(_PublishArgs)
               -configuration $(_BuildConfig)
               /bl:${{ parameters.repoLogPath }}/pack.binlog
-              /p:Restore=false /p:Build=false
+              # /p:Restore=false /p:Build=false
               $(_OfficialBuildIdArgs)
       displayName: Pack, Sign & Publish
     
