--- a/src/Workload/workloads.csproj
+++ b/src/Workload/workloads.csproj
@@ -11,6 +11,8 @@
     <WorkloadOutputPath>$(ArtifactsBinDir)workloads/</WorkloadOutputPath>
     <WorkloadOutputPath Condition="'$(workloadArtifactsPath)' != ''">$(workloadArtifactsPath)/</WorkloadOutputPath>
     <RunAnalyzers>false</RunAnalyzers>
+    <WorkloadMsiGenProps>$(ArtifactsShippingPackagesDir)/vs-workload.props</WorkloadMsiGenProps>
+
   </PropertyGroup>
 
   <PropertyGroup>
