--- a/src/Graphics/src/Graphics.Skia.WPF/Graphics.Skia.WPF.csproj
+++ b/src/Graphics/src/Graphics.Skia.WPF/Graphics.Skia.WPF.csproj
@@ -18,6 +18,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.WindowsAppSDK" />
     <PackageReference Include="SkiaSharp.Views.WPF" />
   </ItemGroup>
 
