--- a/src/Graphics/samples/GraphicsTester.Skia.Windows/GraphicsTester.Skia.Windows.csproj
+++ b/src/Graphics/samples/GraphicsTester.Skia.Windows/GraphicsTester.Skia.Windows.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.WindowsAppSDK" />
     <PackageReference Include="SkiaSharp.Views.WPF" />
   </ItemGroup>
 
