--- a/eng/pipelines/common/variables.yml
+++ b/eng/pipelines/common/variables.yml
@@ -73,6 +73,6 @@ variables:
     - group: Publish-Build-Assets
     - group: DotNet-HelixApi-Access
     - group: SDL_Settings
-    - name: PostBuildSign
-      value: true
+    # - name: PostBuildSign
+    #   value: true
 
