--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -42,6 +42,7 @@ body:
       label: Version with bug
       description: In what version do you see this issue? Run `dotnet workload list` to find your version.
       options:
+        - 9.0.0-rc.1.24453.9
         - 9.0.0-preview.7.24407.4
         - 9.0.0-preview.6.24327.7
         - 9.0.0-preview.5.24307.10
@@ -129,6 +130,7 @@ body:
         - 9.0.0-preview.4.10690
         - 9.0.0-preview.5.24307.10
         - 9.0.0-preview.6.24327.7
+        - 9.0.0-preview.7.24407.4
     validations:
       required: true
   - type: dropdown
