--- a/eng/pipelines/common/maui-templates.yml
+++ b/eng/pipelines/common/maui-templates.yml
@@ -69,6 +69,12 @@ jobs:
     - template: provision.yml
       parameters:
         checkoutDirectory: ${{ parameters.checkoutDirectory }}
+    - pwsh: |
+        Get-PSDrive -PSProvider FileSystem
+        if ($IsMacOS) {
+          df -h
+        }
+      displayName: 'List drives'
 
     - task: DownloadBuildArtifacts@0
       displayName: 'Download Packages'
@@ -149,6 +155,12 @@ jobs:
       parameters:
         skipXcode: ${{ eq(RunPlatform.testName, 'RunOnAndroid') }}
         checkoutDirectory: ${{ parameters.checkoutDirectory }}
+    - pwsh: |
+        Get-PSDrive -PSProvider FileSystem
+        if ($IsMacOS) {
+          df -h
+        }
+      displayName: 'List drives'
 
     - task: DownloadBuildArtifacts@0
       displayName: 'Download Packages'
