--- a/eng/pipelines/common/ui-tests-build-sample.yml
+++ b/eng/pipelines/common/ui-tests-build-sample.yml
@@ -43,6 +43,11 @@ steps:
       Get-PSDrive -PSProvider FileSystem
       if ($IsMacOS) {
         df -h
+        echo "List Applications."
+        ls /Applications
+        sudo du -hs /Applications
+        echo "List home"
+        ls -R ~
       }
     displayName: 'List drives'
 
