--- a/eng/pipelines/common/ui-tests-compatibility-steps.yml
+++ b/eng/pipelines/common/ui-tests-compatibility-steps.yml
@@ -38,6 +38,11 @@ steps:
       Get-PSDrive -PSProvider FileSystem
       if ($IsMacOS) {
         df -h
+        echo "List Applications."
+        ls /Applications
+        sudo du -hs /Applications
+        echo "List home"
+        ls -R ~
       }
     displayName: 'List drives'
 
