[CI] Clean log files from previous runs.

--- a/eng/pipelines/common/device-tests-steps.yml
+++ b/eng/pipelines/common/device-tests-steps.yml
@@ -34,15 +34,17 @@ steps:
       skipAndroidImages : ${{ eq(parameters.platform, 'ios') }}
       skipAndroidSdks: ${{ eq(parameters.platform, 'ios') }}
       provisionatorChannel: ${{ parameters.provisionatorChannel }}
+
+  - pwsh: |
+      if ($IsMacOS) {
+        Remove-Item -Recurse -Force "$($env:HOME)/*.logarchive"
+      }
+    displayName: 'Clean logfiles'
+
   - pwsh: |
       Get-PSDrive -PSProvider FileSystem
       if ($IsMacOS) {
         df -h
-        echo "List Applications."
-        ls /Applications
-        sudo du -hs /Applications
-        echo "List home"
-        ls -R ~
       }
     displayName: 'List drives'
 
