--- a/eng/pipelines/common/maui-templates.yml
+++ b/eng/pipelines/common/maui-templates.yml
@@ -69,15 +69,17 @@ jobs:
     - template: provision.yml
       parameters:
         checkoutDirectory: ${{ parameters.checkoutDirectory }}
+
+    - pwsh: |
+        if ($IsMacOS) {
+          Remove-Item -Recurse -Force "$($env:HOME)/*.logarchive"
+        }
+      displayName: 'Clean logfiles'
+
     - pwsh: |
         Get-PSDrive -PSProvider FileSystem
         if ($IsMacOS) {
           df -h
-          echo "List Applications."
-          ls /Applications
-          sudo du -hs /Applications
-          echo "List home"
-          ls -R ~
         }
       displayName: 'List drives'
 
@@ -160,15 +162,17 @@ jobs:
       parameters:
         skipXcode: ${{ eq(RunPlatform.testName, 'RunOnAndroid') }}
         checkoutDirectory: ${{ parameters.checkoutDirectory }}
+
+    - pwsh: |
+        if ($IsMacOS) {
+          Remove-Item -Recurse -Force "$($env:HOME)/*.logarchive"
+        }
+      displayName: 'Clean logfiles'
+
     - pwsh: |
         Get-PSDrive -PSProvider FileSystem
         if ($IsMacOS) {
           df -h
-          echo "List Applications."
-          ls /Applications
-          sudo du -hs /Applications
-          echo "List home"
-          ls -R ~
         }
       displayName: 'List drives'
 
