--- a/eng/pipelines/common/pack.yml
+++ b/eng/pipelines/common/pack.yml
@@ -124,14 +124,15 @@ steps:
     condition: and(succeeded(), eq(variables['Agent.OS'], 'Windows_NT'))
 
   - pwsh: |
+      if ($IsMacOS) {
+        Remove-Item -Recurse -Force "$($env:HOME)/*.logarchive"
+      }
+    displayName: 'Clean logfiles'
+
+  - pwsh: |
       Get-PSDrive -PSProvider FileSystem
       if ($IsMacOS) {
         df -h
-        echo "List Applications."
-        ls /Applications
-        sudo du -hs /Applications
-        echo "List home"
-        ls -R ~
       }
     displayName: 'List drives'
 
