--- a/eng/pipelines/common/ui-tests-compatibility-steps.yml
+++ b/eng/pipelines/common/ui-tests-compatibility-steps.yml
@@ -35,14 +35,15 @@ steps:
  
 
   - pwsh: |
+      if ($IsMacOS) {
+        Remove-Item -Recurse -Force "$($env:HOME)/*.logarchive"
+      }
+    displayName: 'Clean logfiles'
+
+  - pwsh: |
       Get-PSDrive -PSProvider FileSystem
       if ($IsMacOS) {
         df -h
-        echo "List Applications."
-        ls /Applications
-        sudo du -hs /Applications
-        echo "List home"
-        ls -R ~
       }
     displayName: 'List drives'
 
