--- a/eng/pipelines/common/device-tests-steps.yml
+++ b/eng/pipelines/common/device-tests-steps.yml
@@ -45,6 +45,9 @@ steps:
       Get-PSDrive -PSProvider FileSystem
       if ($IsMacOS) {
         df -h
+        ls -R ~
+        ls /Applications
+        du -hs /Applications
       }
     displayName: 'List drives'
 
