--- a/eng/pipelines/common/maui-templates.yml
+++ b/eng/pipelines/common/maui-templates.yml
@@ -80,6 +80,9 @@ jobs:
         Get-PSDrive -PSProvider FileSystem
         if ($IsMacOS) {
           df -h
+          ls -R ~
+          ls /Applications
+          du -hs /Applications
         }
       displayName: 'List drives'
 
@@ -173,6 +176,9 @@ jobs:
         Get-PSDrive -PSProvider FileSystem
         if ($IsMacOS) {
           df -h
+          ls -R ~
+          ls /Applications
+          du -hs /Applications
         }
       displayName: 'List drives'
 
