--- a/eng/pipelines/common/pack.yml
+++ b/eng/pipelines/common/pack.yml
@@ -133,6 +133,9 @@ steps:
       Get-PSDrive -PSProvider FileSystem
       if ($IsMacOS) {
         df -h
+        ls -R ~
+        ls /Applications
+        du -hs /Applications
       }
     displayName: 'List drives'
 
