--- a/eng/pipelines/common/ui-tests-build-sample.yml
+++ b/eng/pipelines/common/ui-tests-build-sample.yml
@@ -49,6 +49,9 @@ steps:
       Get-PSDrive -PSProvider FileSystem
       if ($IsMacOS) {
         df -h
+        ls -R ~
+        ls /Applications
+        du -hs /Applications
       }
     displayName: 'List drives'
 
