--- a/eng/pipelines/handlers.yml
+++ b/eng/pipelines/handlers.yml
@@ -176,6 +176,9 @@ stages:
                   Get-PSDrive -PSProvider FileSystem
                   if ($IsMacOS) {
                     df -h
+                    ls -R ~
+                    ls /Applications
+                    du -hs /Applications
                   }
                 displayName: 'List drives'
               - pwsh: ./build.ps1 --target=dotnet --configuration="${{ BuildConfiguration }}" --verbosity=diagnostic
@@ -276,6 +279,9 @@ stages:
                 Get-PSDrive -PSProvider FileSystem
                 if ($IsMacOS) {
                   df -h
+                  ls -R ~
+                  ls /Applications
+                  du -hs /Applications
                 }
               displayName: 'List drives'
 
