--- a/eng/pipelines/handlers.yml
+++ b/eng/pipelines/handlers.yml
@@ -180,10 +180,17 @@ stages:
 
                     Write-Host "Home directory size"
                     du -hs ~
+                    Write-Host "Directory sizes"
                     $dirs = Get-ChildItem -Path ~ -Directory
                     foreach ($d in $dirs) {
                       Write-Host "Size of $d"
                       du -hs "$d"
+                    }
+                    Write-Host "Files sizes"
+                    $files = Get-ChildItem -Path ~ -File
+                    foreach ($f in $files) {
+                      Write-Host "Size of $f"
+                      du -hs "$f"
                     }
 
                     Write-Host "/Applications information"
@@ -287,19 +294,26 @@ stages:
             - pwsh: |
                 Get-PSDrive -PSProvider FileSystem
                 if ($IsMacOS) {
-                  Write-Host "Volumnes information"
-                  df -h
+                    Write-Host "Volumnes information"
+                    df -h
 
-                  Write-Host "Home directory size"
-                  du -hs ~
-                  $dirs = Get-ChildItem -Path ~ -Directory
-                  foreach ($d in $dirs) {
-                    Write-Host "Size of $d"
-                    du -hs "$d"
-                  }
+                    Write-Host "Home directory size"
+                    du -hs ~
+                    Write-Host "Directory sizes"
+                    $dirs = Get-ChildItem -Path ~ -Directory
+                    foreach ($d in $dirs) {
+                      Write-Host "Size of $d"
+                      du -hs "$d"
+                    }
+                    Write-Host "Files sizes"
+                    $files = Get-ChildItem -Path ~ -File
+                    foreach ($f in $files) {
+                      Write-Host "Size of $f"
+                      du -hs "$f"
+                    }
 
-                  Write-Host "/Applications information"
-                  du -hs /Applications
+                    Write-Host "/Applications information"
+                    du -hs /Applications
                 }
               displayName: 'List drives'
 
