--- a/eng/pipelines/common/ui-tests-steps.yml
+++ b/eng/pipelines/common/ui-tests-steps.yml
@@ -62,9 +62,6 @@ steps:
   - pwsh: |
       Get-PSDrive -PSProvider FileSystem
       if ($IsMacOS) {
-        Write-Host "Volumnes information"
-        df -h
-
         Write-Host "Home directory size"
         du -hs ~
         Write-Host "Directory sizes"
@@ -75,6 +72,18 @@ steps:
         }
         Write-Host "Files sizes"
         $files = Get-ChildItem -Path ~ -File
+        foreach ($f in $files) {
+          Write-Host "Size of $f"
+          du -hs "$f"
+        }
+        Write-Host "~/Library data"
+        du -hs ~/Library
+        $dirs = Get-ChildItem -Path ~/Library -Directory
+        foreach ($d in $dirs) {
+          Write-Host "Size of $d"
+          du -hs "$d"
+        }
+        $files = Get-ChildItem -Path ~/Library -File
         foreach ($f in $files) {
           Write-Host "Size of $f"
           du -hs "$f"
