--- a/NuGet.config
+++ b/NuGet.config
@@ -8,6 +8,9 @@
     <!--  Begin: Package sources from dotnet-android -->
     <add key="darc-pub-dotnet-android-45bb7f3" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-dotnet-android-45bb7f36/nuget/v3/index.json" />
     <!--  End: Package sources from dotnet-android -->
+    <!--  Begin: Package sources from xamarin-xamarin-macios -->
+    <add key="darc-pub-xamarin-xamarin-macios-a8d7eab2" value="https://pkgs.dev.azure.com/dnceng/public/_packaging/darc-pub-xamarin-xamarin-macios-a8d7eab2/nuget/v3/index.json" />
+    <!--  End: Package sources from xamarin-xamarin-macios -->
     <!--  Begin: Package sources from dotnet-aspnetcore -->
     <!--  End: Package sources from dotnet-aspnetcore -->
     <!--  Begin: Package sources from dotnet-emsdk -->
